--- a/CommunicationTest WatchKit App/Base.lproj/Interface.storyboard
+++ b/CommunicationTest WatchKit App/Base.lproj/Interface.storyboard
@@ -16,22 +16,19 @@
                     <items>
                         <group width="1" alignment="left" id="PEo-iJ-VR0">
                             <items>
-                                <button alignment="left" title="Push " id="fzB-f5-y2S">
-                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <fontDescription key="font" type="system" pointSize="10"/>
-                                    <connections>
-                                        <action selector="buttonPressed" destination="AgC-eL-Hgc" id="EFk-bs-nx7"/>
-                                    </connections>
-                                </button>
-                                <label height="20" alignment="left" text="Label" numberOfLines="2" id="PMJ-75-bao">
+                                <label height="20" alignment="left" text="Pokemon Name" numberOfLines="2" id="PMJ-75-bao">
                                     <fontDescription key="font" name="Helvetica-Bold" family="Helvetica" pointSize="13"/>
                                 </label>
                             </items>
                         </group>
-                        <label width="133" alignment="left" text="Pokemon Name" id="eBR-Vg-0xb">
-                            <color key="textColor" red="1" green="0.48723832627024866" blue="0.41422154224099594" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        </label>
                         <imageView width="47" height="47" alignment="center" image="pokeball" id="RxI-YZ-AgM"/>
+                        <button width="1" alignment="left" title="Feed Pokemon" id="AOP-Sw-4ep">
+                            <connections>
+                                <action selector="feedPokemon" destination="AgC-eL-Hgc" id="htd-dV-GuS"/>
+                            </connections>
+                        </button>
+                        <label alignment="left" text="Current Life:" id="x4H-Ya-OYt"/>
+                        <label alignment="left" text="Hunger Level:" id="bDT-dh-sro"/>
                         <label alignment="center" text="Albert is hungry" id="QdJ-Fj-LrR">
                             <fontDescription key="font" style="UICTFontTextStyleCaption1"/>
                         </label>
@@ -72,11 +69,12 @@
                         </label>
                     </items>
                     <connections>
+                        <outlet property="currentLife" destination="x4H-Ya-OYt" id="WM5-3R-bT2"/>
+                        <outlet property="hungerLevel" destination="bDT-dh-sro" id="1yv-Si-yWQ"/>
                         <outlet property="messageLabel" destination="PMJ-75-bao" id="X1T-aZ-hg2"/>
                         <outlet property="nameLabel" destination="QdJ-Fj-LrR" id="HAA-SN-3Fj"/>
                         <outlet property="outputLabel" destination="Pt1-1p-5yN" id="Ojk-s6-fYf"/>
                         <outlet property="pokemonImageView" destination="RxI-YZ-AgM" id="Cu6-PZ-z19"/>
-                        <outlet property="pokemonName" destination="eBR-Vg-0xb" id="7nJ-6k-TZO"/>
                     </connections>
                 </controller>
             </objects>
@@ -98,6 +96,7 @@
                             <color key="backgroundColor" red="1" green="0.9385274106" blue="0.23414020229999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="startButtonPressed" destination="TKJ-vR-82D" id="yIB-Vl-PdC"/>
+                                <segue destination="AgC-eL-Hgc" kind="push" id="zkx-BQ-bTD"/>
                             </connections>
                         </button>
                     </items>
